patch : 리스트에서 지도로 이동할때 지도 로직 추가중

--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -3,8 +3,17 @@
   height: 100%;
   width: 100%;
 }
+
+.header_area {
+  height: 70px;
+}
+
 .map_style {
   width: 100%;
   height: 100%;
   margin: 0 auto;
+}
+
+.component_area {
+  height: calc(100% - 126px);
 }
